feat: project done

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,10 @@ body {
     background-color: blueviolet;
 }
 
+/* COMMON */
 .container {
     margin: 0 auto;
+    width: 500px;
     border: 1px solid white;
 }
 
@@ -17,9 +19,40 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    flex-shrink: 0;
+    gap: 10px;
+    /* debug */
+    border: 1px solid black;
+    background-color: lightcoral;
+    
 }
 
 .box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
     height: 50px;
     width: 50px;
+}
+
+.fizz {
+    background-color: lightpink;
+}
+
+.buzz {
+    background-color: lightgreen;
+}
+
+.fizzbuzz {
+    background-image: linear-gradient(lightpink, lightgreen);
+}
+
+.normal {
+    background-color: aliceblue;
+}
+
+/* UTILITIES */
+.m-t-40 {
+    margin-top: 40px;
 }
